--- a/package.json
+++ b/package.json
@@ -21,9 +21,15 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.5.0",
+    "helmet": "^8.0.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "xss-filters": "^1.2.7",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
