--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
-    "xss-filters": "^1.2.7",
-    "morgan": "^1.10.0"
+    "winston": "^3.17.0",
+    "xss-filters": "^1.2.7"
   },
   "devDependencies": {
     "chai": "^4.3.6",
